--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
 <body>
     <header>
         <div class="logo">
-            <h2>Craftsvilla</h2>
+            <h2>CRAFTSVILLA</h2>
         </div>
         <nav>
             <a href="#">GALERI</a>
             <a href="#">TILBAKEMEDLING</a>
-            <a class="order-button" href="#">BESTILL</a>
+            <a class="button" href="#">BESTILL</a>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section id="snap-scroll" class="intro-section" dir="rtl">
+            <h1>Kreative workshops og aktiviteter</h1>
+            <hr>
+            <h2>Som fremmer samhold og avlsapning blant ulike grupper som foreldre og barn, venner, kollegaer og flere</h2>
+        </section>
+        <section id="snap-scroll" class="products-section" dir="rtl">
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
