Implemented snap scroll and loating navbar

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <a class="button" href="#">BESTILL</a>
         </nav>
     </header>
-    <main>
-        <section id="snap-scroll" class="intro-section" dir="rtl">
+    <main id="scroll-wrapper">
+        <section id="scroll-section" class="intro-section">
             <h1>Kreative workshops og aktiviteter</h1>
             <hr>
             <h2>Som fremmer samhold og avlsapning blant ulike grupper som foreldre og barn, venner, kollegaer og flere</h2>
         </section>
-        <section id="snap-scroll" class="products-section" dir="rtl">
+        <section id="scroll-section" class="products-section">
             <div></div>
             <div></div>
             <div></div>
