styled the divs for products section

--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
             <h2>Som fremmer samhold og avlsapning blant ulike grupper som foreldre og barn, venner, kollegaer og flere</h2>
         </section>
         <section id="scroll-section" class="products-section">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="lerret" class="product-cards">
+                <h2>LERRETMALING</h2>
+                <a class="button" href="#">LES MER</a>
+            </div>
+            <div id="avarell" class="product-cards">
+                <h2>AKVARELLMALING</h2>
+                <a class="button" href="#">LES MER</a>
+            </div>
+            <div id="mosaikk" class="product-cards">
+                <h2>MOSAIKK KUNST</h2>
+                <a class="button" href="#">LES MER</a>
+            </div>
         </section>
     </main>
     <footer></footer>
