Started on the galleri section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>CRAFTSVILLA</h2>
         </div>
         <nav>
-            <a href="#">GALERI</a>
+            <a href="#">GALLERI</a>
             <a href="#">TILBAKEMEDLING</a>
             <a class="button" href="#">BESTILL</a>
         </nav>
@@ -37,6 +37,13 @@
                 <h2>MOSAIKK KUNST</h2>
                 <a class="button" href="#">LES MER</a>
             </div>
+        </section>
+        <section id="scroll-section" class="galleri-section">
+            <div.galleri-cardsec>
+                <div id=""  class="galleri-cards"></div>
+                <div id="" class="galleri-cards"></div>
+                <div id="" class="galleri-cards"></div>
+            </div.galleri-cardsec>
         </section>
     </main>
     <footer></footer>
