--- a/index.html
+++ b/index.html
@@ -29,23 +29,53 @@
                 <h2>LERRETMALING</h2>
                 <a class="button" href="#">LES MER</a>
             </div>
-            <div id="avarell" class="product-cards">
+            <div id="akvarell" class="product-cards">
                 <h2>AKVARELLMALING</h2>
                 <a class="button" href="#">LES MER</a>
             </div>
-            <div id="mosaikk" class="product-cards">
+            <div  id="mosaikk" class="product-cards">
                 <h2>MOSAIKK KUNST</h2>
                 <a class="button" href="#">LES MER</a>
             </div>
         </section>
         <section id="scroll-section" class="galleri-section">
-            <div.galleri-cardsec>
-                <div id=""  class="galleri-cards"></div>
-                <div id="" class="galleri-cards"></div>
-                <div id="" class="galleri-cards"></div>
-            </div.galleri-cardsec>
+            <h2>SJEKK UT VÅRT GALLERI</h2>
+            <div class="galleri-cardsec">
+                <a href="">
+                    <div id="gal-card1"  class="galleri-cards"></div>
+                </a>
+                <a href="">
+                    <div id="gal-card2" class="galleri-cards"></div>
+                </a>
+                <a href="">
+                    <div id="gal-card3" class="galleri-cards"></div>
+                </a>
+            </div>
+        </section>
+        <section id="scroll-section" class="feedback-section">
+            <div class="feedback-cardsec">
+                <div id="fb-card1"  class="feedback-cards">
+                    <img src="/images/" alt="Profile picture">
+                    <p class="feedback-text">Var her med hele familien og dette var en fantastisk opplevelse! Kommer garantert tilbake</p>
+                    <p class="feedback-name">Ann Katrin</p>
+                    <p class="feedback-product">Mosaikk Kunst</p>
+                </div>
+                <div id="fb-card2" class="feedback-cards">
+
+                </div>
+                <div id="fb-card3" class="feedback-cards">
+
+                </div>
+            </div>
+            <footer>
+                <p>+47 40 123 510</p>
+                <p>post@craftsvilla.no</p>
+                <p>Osloveien 67, Oslo 0010</p>
+                <h2>CRAFTSVILLA</h2>
+                <hr>
+                <p>© 2024 CASTLEVILLA - All Rights Reserved</p>
+            </footer>
         </section>
     </main>
-    <footer></footer>
 </body>
 </html>
