mostly done with home page

--- a/index.html
+++ b/index.html
@@ -55,16 +55,28 @@
         <section id="scroll-section" class="feedback-section">
             <div class="feedback-cardsec">
                 <div id="fb-card1"  class="feedback-cards">
-                    <img src="/images/" alt="Profile picture">
+                    <img src="/images/person.png" alt="Profile picture">
                     <p class="feedback-text">Var her med hele familien og dette var en fantastisk opplevelse! Kommer garantert tilbake</p>
-                    <p class="feedback-name">Ann Katrin</p>
-                    <p class="feedback-product">Mosaikk Kunst</p>
+                    <div>
+                        <p class="feedback-name"><b>Ann Katrin</b></p>
+                        <p class="feedback-product"><b>Mosaikk Kunst</b></p>
+                    </div>
                 </div>
                 <div id="fb-card2" class="feedback-cards">
-
+                    <img src="/images/person.png" alt="Profile picture">
+                    <p class="feedback-text">Var her med hele familien og dette var en fantastisk opplevelse! Kommer garantert tilbake</p>
+                    <div>
+                        <p class="feedback-name"><b>Ann Katrin</b></p>
+                        <p class="feedback-product"><b>Mosaikk Kunst</b></p>
+                    </div>
                 </div>
                 <div id="fb-card3" class="feedback-cards">
-
+                    <img src="/images/person.png" alt="Profile picture">
+                    <p class="feedback-text">Var her med hele familien og dette var en fantastisk opplevelse! Kommer garantert tilbake</p>
+                    <div>
+                        <p class="feedback-name"><b>Ann Katrin</b></p>
+                        <p class="feedback-product"><b>Mosaikk Kunst</b></p>
+                    </div>
                 </div>
             </div>
             <footer>
