Changed some linking on the navbar

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <div class="logo">
-            <h2>CRAFTSVILLA</h2>
+            <a href="index.html"><h2>CRAFTSVILLA</h2></a>
         </div>
         <nav>
-            <a href="#">GALLERI</a>
-            <a href="#">TILBAKEMEDLING</a>
-            <a class="button" href="#">BESTILL</a>
+            <a href="galleri.html">GALLERI</a>
+            <a href="feedback.html">TILBAKEMEDLING</a>
+            <a class="button" href="booking.html">BESTILL</a>
         </nav>
     </header>
     <main id="scroll-wrapper">
