Linked some pictures to galleri

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <section id="scroll-section" class="galleri-section">
             <h2>SJEKK UT VÅRT GALLERI</h2>
             <div class="galleri-cardsec">
-                <a href="">
+                <a href="galleri.html">
                     <div id="gal-card1"  class="galleri-cards"></div>
                 </a>
-                <a href="">
+                <a href="galleri.html">
                     <div id="gal-card2" class="galleri-cards"></div>
                 </a>
-                <a href="">
+                <a href="galleri.html">
                     <div id="gal-card3" class="galleri-cards"></div>
                 </a>
             </div>
