Galleri page done with pictures

--- a/galleri.html
+++ b/galleri.html
@@ -20,7 +20,22 @@
         </nav>
     </header>
     <main>
-
+        <h1>GALLERI</h1>
+        <div class="galleri-cardsec">
+            <div id="gal-card1"  class="galleri-cards"></div>
+            <div id="gal-card2" class="galleri-cards"></div>
+            <div id="gal-card3" class="galleri-cards"></div>
+        </div>
+        <div class="galleri-cardsec">
+            <div id="gal-card1"  class="galleri-cards"></div>
+            <div id="gal-card2" class="galleri-cards"></div>
+            <div id="gal-card3" class="galleri-cards"></div>
+        </div>
+        <div class="galleri-cardsec">
+            <div id="gal-card1"  class="galleri-cards"></div>
+            <div id="gal-card2" class="galleri-cards"></div>
+            <div id="gal-card3" class="galleri-cards"></div>
+        </div>
     </main>
     <footer>
         <p>+47 40 123 510</p>
