Changed some background images

--- a/feedback.html
+++ b/feedback.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="booking.css">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="feedback">
     <header>
         <div class="logo">
             <a href="index.html"><h2>CRAFTSVILLA</h2></a>
