Changed text on product card button, and made them functional

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <section id="scroll-section" class="products-section">
             <div id="lerret" class="product-cards">
                 <h2>LERRETMALING</h2>
-                <a class="button" href="#">LES MER</a>
+                <a class="button" href="booking.html">BESTILL</a>
             </div>
             <div id="akvarell" class="product-cards">
                 <h2>AKVARELLMALING</h2>
-                <a class="button" href="#">LES MER</a>
+                <a class="button" href="booking.html">BESTILL</a>
             </div>
             <div  id="mosaikk" class="product-cards">
                 <h2>MOSAIKK KUNST</h2>
-                <a class="button" href="#">LES MER</a>
+                <a class="button" href="booking.html">BESTILL</a>
             </div>
         </section>
         <section id="scroll-section" class="galleri-section">
